--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@pbe/react-yandex-maps": "^1.2.2",
+    "@types/react-datepicker": "^4.8.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "google-spreadsheet": "^3.3.0",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@types/google-spreadsheet": "^3.3.0",
+    "date-fns": "^2.29.3",
     "react-hook-form": "^7.41.3",
     "yup": "^0.32.11"
   }
